Broken "Select" -> "More" in face mode in UV Editor #71864

Closed
opened 2019-11-24 19:05:29 +01:00 by Pawel · 17 comments

When I have uv map of any model I selecting one face of one uv island and than I want to expend my selection via Select -> More. Selection expends on other uv islands in UV Editor window. I'm sure that that's not the way it meant to be.

Thanks and Cheers,
PM

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

When I have uv map of any model I selecting one face of one uv island and than I want to expend my selection via Select -> More. Selection expends on other uv islands in UV Editor window. I'm sure that that's not the way it meant to be. Thanks and Cheers, PM **System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @steaky005

Added subscriber: @steaky005
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Do you have UV Sync Selection turned ON?

image.png

In that case, selection will grow in 3D as well (possibly resulting in selection of faces in other islands as well...)
(would also assume that in this case, it would not be considered a bug - not sure though, would need to double-check)

If UV Sync Selection is OFF, then please provide a simple example .blend file for us to reproduce [selection should grow over island borders in that case...]

Do you have `UV Sync Selection` turned ON? ![image.png](https://archive.blender.org/developer/F8164720/image.png) In that case, selection will grow in 3D as well (possibly resulting in selection of faces in other islands as well...) (would also assume that in this case, it would not be considered a bug - not sure though, would need to double-check) If `UV Sync Selection` is OFF, then please provide a simple example .blend file for us to reproduce [selection should grow over island borders in that case...]
Author

No, its off. In face mode selection something is clearly wrong.

No, its off. In face mode selection something is clearly wrong.
Member

If UV Sync Selection is OFF, then please provide a simple example .blend file for us to reproduce

> If UV Sync Selection is OFF, then please provide a simple example .blend file for us to reproduce
Author
[T71864_example.blend](https://archive.blender.org/developer/F8165240/T71864_example.blend)

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

can't reproduce i spend 30 min on this all works fine on 2.81 both windows and linux

can't reproduce i spend 30 min on this all works fine on 2.81 both windows and linux

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Maciej Jutrzenka self-assigned this 2019-11-26 16:01:14 +01:00
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Maciej Jutrzenka was unassigned by Philipp Oeser 2019-11-26 21:37:09 +01:00
Member

@MaciejJutrzenka : Please dont close right away, we still need to investigate why it is not working for @steaky005

@MaciejJutrzenka : Please dont close right away, we still need to investigate why it is not working for @steaky005

@lichtwerk ah sorry, but i just assumed it is a user error :( still learning about correct moderation

@lichtwerk ah sorry, but i just assumed it is a user error :( still learning about correct moderation
Author

Maybe first try on vertexs or edges, than change to faces once more. Selection grown instantly to whole island, and sometimes it takes few faces from others. Its clearly broken.

Maybe first try on vertexs or edges, than change to faces once more. Selection grown instantly to whole island, and sometimes it takes few faces from others. Its clearly broken.
Member

Can confirm there is something wrong, checking...

Can confirm there is something wrong, checking...
Philipp Oeser self-assigned this 2019-11-27 10:55:25 +01:00

This issue was referenced by bdfcee347e

This issue was referenced by bdfcee347ebe26cda5b5d51ce6006a6766e97842

This issue was referenced by 3fa2b85bfd

This issue was referenced by 3fa2b85bfd672156f7019252d00f8859c1bd5b22
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71864
No description provided.